--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -83,6 +83,17 @@ label .glyphicon {
     -ms-animation-iteration-count: 1;
     -ms-transform-origin: 50% 50%
 }
+.element-animation5 {
+    animation: animationFrames ease 1.6s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+    -webkit-animation: animationFrames ease 1.6s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+    -ms-animation: animationFrames ease 1.6s;
+    -ms-animation-iteration-count: 1;
+    -ms-transform-origin: 50% 50%
+}
 @keyframes animationFrames {
     0% {
         opacity: 0;
