--- a/assets/plugins/CaptionHover/css/default.css
+++ b/assets/plugins/CaptionHover/css/default.css
@@ -68,8 +68,8 @@ a:active {
 }
 
 .codrops-top a:hover {
-	background: rgba(255,255,255,0.95);
-	color: #333;
+	background: rgba(255,255,255,0.95) !important;;
+	color: #333 !important;;
 }
 
 .codrops-top span.right {
