--- a/assets/bootstrap/css/bootstrap.css
+++ b/assets/bootstrap/css/bootstrap.css
@@ -1130,8 +1130,8 @@ img {
 }
 .img-thumbnail {
   display: inline-block;
-  max-width: 100%;
-  height: auto;
+  width: 100px;
+  height: 100px;
   padding: 4px;
   line-height: 1.42857143;
   background-color: #fff;
